fixed overflow x scroll issue

--- a/main.css
+++ b/main.css
@@ -906,6 +906,9 @@ video {
 .overflow-visible {
   overflow: visible;
 }
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
 .scroll-smooth {
   scroll-behavior: smooth;
 }
